--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.2'
+    compile files('libs/ksoap2/ksoap2-android-assembly-3.4.0-jar-with-dependencies.jar')
 }
 
