--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:allowBackup="true" android:label="@string/app_name"
         android:icon="@drawable/ic_launcher" android:theme="@style/AppTheme">
         <activity android:name=".ReimburseActivity"/>
+        <activity android:name=".MainActivity"/>
         <activity android:name=".activities.LoginActivity"
+        <activity android:name=".MyTabActivity"
             android:label="OCRDemo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -19,6 +21,9 @@
         <service android:name=".service.PeriodConnectServerService"/>
         <receiver android:name=".receiver.AlarmReceiver"/>
 
+        <activity android:name=".ReimburseActivity"/>
+        <activity android:name=".InfoActivity"/>
+        <activity android:name=".QueryActivity"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
