--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.oracle.sh.groupa.ocrdemo"
-        minSdkVersion 10
+        minSdkVersion 21
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -28,5 +28,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.2'
     compile files('libs/ksoap2/ksoap2-android-assembly-3.4.0-jar-with-dependencies.jar')
+    compile files('libs/gson/gson-2.2.4.jar')
 }
 
