--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
         android:minSdkVersion="10"/>
     <application android:allowBackup="true" android:label="@string/app_name"
         android:icon="@drawable/ic_launcher" android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".activities.LoginActivity"
             android:label="OCRDemo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
