--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.2'
     compile files('libs/ksoap2/ksoap2-android-assembly-3.4.0-jar-with-dependencies.jar')
     compile files('libs/gson/gson-2.2.4.jar')
+    compile files('libs/Base64/javabase64-1.3.1.jar')
+    compile files('libs/Base64/sun.misc.BASE64Decoder.jar')
 }
 
