--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,9 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
     <uses-sdk
         android:minSdkVersion="10"/>
-    <application android:allowBackup="true" android:label="@string/app_name"
+    <application
+        android:name=".ContextApplication"
+        android:allowBackup="true" android:label="@string/app_name"
         android:icon="@drawable/ic_launcher" android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"/>
         <activity android:name=".activities.LoginActivity"
@@ -14,6 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <service android:name=".service.PeriodConnectServerService"/>
+        <receiver android:name=".receiver.AlarmReceiver"/>
 
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
