--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:name=".ContextApplication"
         android:allowBackup="true" android:label="@string/app_name"
         android:icon="@drawable/ic_launcher" android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".ReimburseActivity"/>
         <activity android:name=".activities.LoginActivity"
             android:label="OCRDemo">
             <intent-filter>
