ready to merge to oooooooooooooooops

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         <activity android:name=".activities.LoginActivity"
         <activity android:name=".MyTabActivity"
             android:label="OCRDemo">
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".activities.LoginActivity" />
+        <activity android:name=".MyTabActivity" android:label="OCRDemo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
