--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,32 +2,29 @@
     package="com.oracle.sh.groupa.ocrdemo">
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-sdk
         android:minSdkVersion="10"/>
     <application
         android:name=".ContextApplication"
         android:allowBackup="true" android:label="@string/app_name"
         android:icon="@drawable/ic_launcher" android:theme="@style/AppTheme">
-        <activity android:name=".ReimburseActivity"/>
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".activities.LoginActivity"
-        <activity android:name=".MyTabActivity"
-            android:label="OCRDemo">
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".activities.LoginActivity" />
-        <activity android:name=".MyTabActivity" android:label="OCRDemo">
+        <activity android:name=".activities.ReimburseActivity"/>
+
+        <activity android:name=".activities.MyTabActivity" />
+        <activity android:name=".activities.LoginActivity" android:label="OCRDemo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".activities.InfoActivity"/>
+        <activity android:name=".activities.QueryActivity"/>
+        <activity android:name=".activities.ShowrecipeActivity"/>
+
         <service android:name=".service.PeriodConnectServerService"/>
         <receiver android:name=".receiver.AlarmReceiver"/>
 
-        <activity android:name=".ReimburseActivity"/>
-        <activity android:name=".InfoActivity"/>
-        <activity android:name=".QueryActivity"/>
-        <activity android:name=".ShowrecipeActivity"/>
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
