--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:name=".ContextApplication"
         android:allowBackup="true" android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher" android:theme="@style/AppTheme">
+        android:icon="@drawable/apppic" android:theme="@style/AppTheme">
         <activity android:name=".activities.ReimburseActivity"/>
 
         <activity android:name=".activities.MyTabActivity" />
